# nself

./: .gitignore  README.md  checkpoint_note.md  journey.md  opsdeploy.sh  reproduce_issue.sh  reproduce_validation.sh  test_aio.yml  test_aio_v2.yml  test_dns_config.sh  test_fastapi_generation.sh  test_llamaindex_template.sh  test_llamaindex_wizard.sh  test_output.txt  test_template.sh  test_wizard_neo4j.sh
src/cli/: admin.sh  start.sh  status.sh  stop.sh  urls.sh
src/lib/init/wizard/: templates.sh  wizard-core.sh  wizard-simple.sh
src/lib/init/wizard/steps/: core-settings.sh  database-config.sh  services-config.sh  wizard-model-providers.sh
src/lib/start/: frontend-init.sh
src/lib/utils/: docker.sh  env-detection.sh  env-merger.sh  env.sh
src/scripts/: backup_knowledge_state.sh  setup-ssl.sh
src/services/docker/: compose-generate.sh
src/services/docker/compose-modules/: ai-ops.sh  core-services.sh  custom-services-templates.sh  custom-services.sh  df.sh  dify.sh  frontend-apps.sh  fw.sh  kg.sh  lf.sh  mg.sh  ml.sh  mlflow-improved.sh  mnemosyne.sh  monitoring-exporters.sh  monitoring-services.sh  nginx.sh  rf.sh  utility-services.sh  zep.sh
src/services/kg/graphrag-api/: Dockerfile  main.py  requirements.txt  worker.py
src/templates/hasura/: event_triggers.yaml.template  seed_superadmin.sql.template
src/templates/services/db/falkordb/: README.md.template  service.yml.template
src/templates/services/py/mnemosyne/: Dockerfile  pyproject.toml
src/templates/services/py/mnemosyne/src/: main.py
src/tools/: ragflow_to_kg.py
(+45 files in other folders)
