[project]
name = "hippocampus"
version = "0.1.0"
description = "Zep-inspired Memory & Context Engine for KBA"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "graphiti-core>=0.1.0",
    "neo4j>=5.19.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
